<resources>
    <string name="app_name">Biodata</string>
    <string name="selamat_datang_di_universitas_esa_unggul_program_studi_teknik_informatika_fakultas_ilmu_komputer">Selamat Datang di Universitas Esa Unggul Program Studi Teknik Informatika - Fakultas Ilmu Komputer</string>
    <string name="pekerjaan_pegawai_swasta">Pekerjaan : Pegawai Swasta</string>
    <string name="todo">TODO</string>
    <string name="hobby">Hobby : -</string>
    <string name="nim_30818022">NIM : 30818022</string>
    <string name="nama_yolanda_febiola_yudestira">Nama : Yolanda Febiola Yudestira</string>
    <string name="status">Status : -</string>
    <string name="title_activity_main2">MainActivity2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>